[package]
name = "n-body-scrapbox"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
debug = true
lto = true

[profile.test]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5"