[package]
name = "n-body-scrapbox"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
debug = true
lto = true
panic = 'abort'
codegen-units = 1

[profile.test]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5"
rand = "0.8.5"
apng = "0.3.1"
png = "0.17.9"
image = { version = "0.24.6", default-features = false, features = ["png"] }