[package]
name = "n-body-scrapbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple01"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
debug = true
lto = true
panic = 'abort'
codegen-units = 1

[profile.test]
opt-level = 3

[dependencies]
plotters = "0.3.5"
rand = "0.8.5"
apng = "0.3.1"
png = "0.17.9"
image = { version = "0.24.6", default-features = false, features = ["png"] }